--- a/AvisoFormsProject/index.html
+++ b/AvisoFormsProject/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css" type="text/css">
     <!--<link rel="stylesheet" href="http://www.aviso.ua/css/bootstrap.min.css">-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 
     <link rel="stylesheet" type="text/css" href="css/styles-carousel.css">
