my portfolio, 3 projects, fixes

--- a/mp/index.html
+++ b/mp/index.html
@@ -57,7 +57,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-circle"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -73,9 +73,18 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
+            <!-- 1660 970 px -->
             <img class="img-fluid" src="img/portfolio/notes.png"  alt="">
           </div>
-          <h4><a href="https://snd47.github.io/notes/index.html" target="_blank">View demo on github.io</a></h4> 
+          <!-- <h4><a href="https://snd47.github.io/notes/index.html" target="_blank">View demo on github.io</a></h4>  -->
+
+          <div class="text-center mt-4">
+            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/notes/index.html">
+              <i class="fab fa-github mr-2"></i>
+              View demo
+            </a>
+          </div>
+
         </div>
 
         <!-- Portfolio Item 2 -->
@@ -86,10 +95,18 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
+            <!-- 1660 970 px -->
             <img class="img-fluid" src="img/portfolio/aviso.png" alt="">
           </div>
-          <h4><a href="https://snd47.github.io/AvisoFormsProject/" target="_blank">View demo on github.io</a></h4> 
+          <!-- <h4><a href="https://snd47.github.io/AvisoFormsProject/" target="_blank">View demo on github.io</a></h4>  -->
           
+          <div class="text-center mt-4">
+            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/AvisoFormsProject/">
+              <i class="fab fa-github mr-2"></i>
+              View demo
+            </a>
+          </div>
+
         </div>
 
         <!-- Portfolio Item 3 -->
@@ -100,9 +117,18 @@
                 <i class="fas fa-plus fa-3x"></i>
               </div>
             </div>
+
+            <!-- 1660 970 px -->
             <img class="img-fluid" src="img/portfolio/moviedb.png" alt="">
           </div>
-          <h4><a href="https://snd47.github.io/MovieDB/" target="_blank">View demo on github.io</a></h4> 
+          <!-- <h4><a href="https://snd47.github.io/MovieDB/" target="_blank">View demo on github.io</a></h4>  -->
+
+          <div class="text-center mt-4">
+            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/MovieDB/">
+              <i class="fab fa-github mr-2"></i>
+              View demo
+            </a>
+          </div>
         </div>
 
       
@@ -112,20 +138,20 @@
     </div>
   </section>
   <!-- Masthead -->
-  <header class="masthead bg-primary text-white text-center  pb-0" id="about">
+  <header class="masthead bg-primary text-white text-center  pb-0 pt-5" id="about">
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
       <img class="masthead-avatar mb-2" src="img/index.png" alt="">
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">Sasha Kononenko</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Alex Kononenko</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-user"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -221,6 +247,7 @@
       </div>
 
       <!-- About Section Button -->
+
       <!-- <div class="text-center mt-4">
         <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
           <i class="fas fa-download mr-2"></i>
