my portfolio, download cv added

--- a/mp/index.html
+++ b/mp/index.html
@@ -331,13 +331,13 @@
       </div>
 
       <!-- About Section Button -->
-
-      <!-- <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/themes/freelancer/">
+   <br><br><br>
+      <div class="text-center mt-4">
+        <a class="btn btn-xl btn-outline-light" href="https://snd47.github.io/docs/javascript-Vue-dev-Oleksandr-Kononenko-cv.docx">
           <i class="fas fa-download mr-2"></i>
-          Free Download!
+          Download my CV!
         </a>
-      </div> -->
+      </div>
 
     </div>
   </section>
