changing project: movieDB to movieDB with Jquery

--- a/mp/index.html
+++ b/mp/index.html
@@ -64,9 +64,29 @@
 
       <!-- Portfolio Grid Items -->
       <div class="row">
+      <!-- Portfolio Item 3 -->
+      <div class="col-md-6 col-lg-4 pb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+
+            <!-- 1660 970 px -->
+            <img class="img-fluid" src="img/portfolio/moviedb.png" alt="">
+          </div>
+
+          <div class="text-center mt-4">
+            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/MovieDB_jquery/">
+              <i class="fab fa-github mr-2"></i>
+              View demo
+            </a>
+          </div>
+        </div>
 
         <!-- Portfolio Item 1 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4  pb-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -88,7 +108,7 @@
         </div>
 
         <!-- Portfolio Item 2 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4 pb-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -109,35 +129,13 @@
 
         </div>
 
-        <!-- Portfolio Item 3 -->
-        <div class="col-md-6 col-lg-4">
-          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-
-            <!-- 1660 970 px -->
-            <img class="img-fluid" src="img/portfolio/moviedb.png" alt="">
-          </div>
-          <!-- <h4><a href="https://snd47.github.io/MovieDB/" target="_blank">View demo on github.io</a></h4>  -->
-
-          <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/MovieDB/">
-              <i class="fab fa-github mr-2"></i>
-              View demo
-            </a>
-          </div>
-        </div>
-
-
       
       </div>
+
       <!-- row 2 -->
       <div class="row pt-5">
         <!-- Portfolio Item 4 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4 pb-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -148,7 +146,6 @@
             <!-- 1660 970 px -->
             <img class="img-fluid" src="img/portfolio/modals.png" alt="">
           </div>
-          <!-- <h4><a href="https://snd47.github.io/MovieDB/" target="_blank">View demo on github.io</a></h4>  -->
 
           <div class="text-center mt-4">
             <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/modals/index.html">
@@ -159,7 +156,7 @@
         </div>
 
         <!-- Portfolio Item 5 -->
-        <div class="col-md-6 col-lg-4">
+        <div class="col-md-6 col-lg-4 pb-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -170,8 +167,6 @@
             <!-- 1660 970 px -->
             <img class="img-fluid" src="img/portfolio/sneakersShop.png" alt="">
           </div>
-          <!-- <h4><a href="https://snd47.github.io/MovieDB/" target="_blank">View demo on github.io</a></h4>  -->
-
           <div class="text-center mt-4">
             <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/sneakersShop/index.html">
               <i class="fab fa-github mr-2"></i>
@@ -181,7 +176,7 @@
         </div>
 
         <!-- Portfolio Item 6 -->
-        <!-- <div class="col-md-6 col-lg-4">
+        <!-- <div class="col-md-6 col-lg-4 pb-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
@@ -415,7 +410,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Notes Ap (Vue.js)</h2>
+                <h3 class="portfolio-modal-title text-secondary text-uppercase mb-0">Notes Ap (Vue.js)</h3>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -425,15 +420,22 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
+                <a target="_blank" href="https://snd47.github.io/notes/index.html">
                 <img class="img-fluid rounded mb-5" src="img/portfolio/notes.png" alt="">
+              </a>
                 <!-- Portfolio Modal - Text -->
                 <p class="mb-5 ">
-                  <ul>
-                  <li>Полная настройка vue-cli</li>
+                  <ul class="text-left">
+                      <li>Complete vue-cli setup</li>
+                      <li>Passing parameters from a child component to a parent and vice versa</li>
+                      <li>Component approach</li>
+                      <li>Element (notes) filtering</li>
+                      <li>Delete and edit items (notes)</li>
+                  <!-- <li>Полная настройка vue-cli</li>
                   <li>Передача параметров из дочернего компонента на родитель и обратно</li>
                   <li>Компонентный подход</li>
                   <li>Фильтрация элементов</li>
-                  <li>Удаление и редактирование элементов</li>
+                  <li>Удаление и редактирование элементов</li> -->
                 </ul>
                   </p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
@@ -462,7 +464,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Aviso Find Documents Project</h2>
+                <h3 class="portfolio-modal-title text-secondary text-uppercase mb-0">Aviso Find Documents Project</h3>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -472,9 +474,16 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
+                <a target="_blank" href="https://snd47.github.io/AvisoFormsProject/">
                 <img class="img-fluid rounded mb-5" src="img/portfolio/aviso.png" alt="">
+              </a>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Project text</p>
+                <p class="mb-5">Front-end application on JQuery</p>
+                <ul class="text-left">
+                    <li>Carousel document picker</li>
+                    <li>Document related submit data form</li>
+                    <li>Media preparing (Photoshop)</li>
+                </ul>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -501,7 +510,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Movie DB API</h2>
+                <h3 class="portfolio-modal-title text-secondary text-uppercase mb-0">Movie DB API on JQuery</h3>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -511,9 +520,29 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
-                <img class="img-fluid rounded mb-5" src="img/portfolio/moviedb.png" alt="">
+                <a target="_blank" href="https://snd47.github.io/MovieDB_jquery/">
+                  <img class="img-fluid rounded mb-5" src="img/portfolio/moviedb.png" alt="">
+                </a>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Movie DB API text</p>
+                <p class="mb-5">Movies search application on JQuery</p>
+                <ul class="text-left">
+                  <li>Based on data got from <a href="https://developers.themoviedb.org/3/">Movie DB API</a> calls</li>
+                  <li>Started to work with <a href="https://developers.themoviedb.org/3/">Movie DB API</a> with Vanilla JS but soon understood that some library should be used.
+                     <a href="https://snd47.github.io/MovieDB/">Vanilla JS Movie DB project</a> is still not finished ))) </li>
+                  <li>Movie elements grid with About movie info hover text</li>
+                  <li>Infinite scroll for Movie elements grid</li>
+                  <li>Instant search by title</li>
+                  <li>Switch localization (language versions)</li>
+                  <li>SVG rating graph on About Movie page</li>
+                  <li>Releted Movies carousel on About Movie page</li>
+                </ul>
+
+                <!-- <div class="text-center mt-4">
+                    <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/MovieDB_jquery/">
+                      <i class="fab fa-github mr-2"></i>
+                      View demo
+                    </a>
+                  </div> -->
                   <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -540,7 +569,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Modals app</h2>
+                <h3 class="portfolio-modal-title text-secondary text-uppercase mb-0">Modals app on Vue.js</h3>
                 <!-- Icon Divider -->
                 <div class="divider-custom">
                   <div class="divider-custom-line"></div>
@@ -550,9 +579,11 @@
                   <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Modal - Image -->
+                <a target="_blank" href="https://snd47.github.io/modals/index.html">
                 <img class="img-fluid rounded mb-5" src="img/portfolio/modals.png" alt="modals">
+              </a>
                 <!-- Portfolio Modal - Text -->
-                <p class="mb-5">Project text</p>
+                <p class="mb-5">Examples of different types of Modals</p>
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close Window
@@ -579,7 +610,7 @@
           <div class="row justify-content-center">
             <div class="col-lg-8">
               <!-- Portfolio Modal - Title -->
-              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Sneakers Shop</h2>
+              <h3 class="portfolio-modal-title text-secondary text-uppercase mb-0">Sneakers Shop</h3>
               <!-- Icon Divider -->
               <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -589,9 +620,11 @@
                 <div class="divider-custom-line"></div>
               </div>
               <!-- Portfolio Modal - Image -->
-              <img class="img-fluid rounded mb-5" src="img/portfolio/sneakersShop.png" alt="modals">
+              <a target="_blank" href="https://snd47.github.io/sneakersShop/index.html">
+              <img class="img-fluid rounded mb-5" src="img/portfolio/sneakersShop.png" alt="Sneakers Shop on Vue.js">
+            </a>
               <!-- Portfolio Modal - Text -->
-              <p class="mb-5">Project text</p>
+              <p class="mb-5">Small Web-shop with product list and about product page</p>
               <button class="btn btn-primary" href="#" data-dismiss="modal">
                 <i class="fas fa-times fa-fw"></i>
                 Close Window
