button link to links; contacts work added

--- a/mp/index.html
+++ b/mp/index.html
@@ -78,7 +78,8 @@
           </div>
 
           <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/MovieDB_jquery/">
+            <!-- <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/MovieDB_jquery/"> -->
+              <a class="view-demo-a" target="_blank" href="https://snd47.github.io/MovieDB_jquery/">
               <i class="fab fa-github mr-2"></i>
               View demo
             </a>
@@ -99,7 +100,8 @@
           <!-- <h4><a href="https://snd47.github.io/notes/index.html" target="_blank">View demo on github.io</a></h4>  -->
 
           <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/notes/index.html">
+            <!-- <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/notes/index.html"> -->
+              <a class="view-demo-a" target="_blank" href="https://snd47.github.io/notes/index.html">
               <i class="fab fa-github mr-2"></i>
               View demo
             </a>
@@ -121,7 +123,8 @@
           <!-- <h4><a href="https://snd47.github.io/AvisoFormsProject/" target="_blank">View demo on github.io</a></h4>  -->
           
           <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/AvisoFormsProject/">
+            <!-- <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/AvisoFormsProject/"> -->
+              <a class="view-demo-a" target="_blank" href="https://snd47.github.io/AvisoFormsProject/">
               <i class="fab fa-github mr-2"></i>
               View demo
             </a>
@@ -148,7 +151,8 @@
           </div>
 
           <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/modals/index.html">
+            <!-- <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/modals/index.html"> -->
+              <a class="view-demo-a" target="_blank" href="https://snd47.github.io/modals/index.html">
               <i class="fab fa-github mr-2"></i>
               View demo
             </a>
@@ -168,7 +172,8 @@
             <img class="img-fluid" src="img/portfolio/sneakersShop.png" alt="">
           </div>
           <div class="text-center mt-4">
-            <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/sneakersShop/index.html">
+            <!-- <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/sneakersShop/index.html"> -->
+              <a class="view-demo-a" target="_blank" href="https://snd47.github.io/sneakersShop/index.html">
               <i class="fab fa-github mr-2"></i>
               View demo
             </a>
@@ -176,6 +181,27 @@
         </div>
 
         <!-- Portfolio Item 6 -->
+        <div class="col-md-6 col-lg-4 pb-3">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+
+            <!-- 1660 970 px -->
+            <img class="img-fluid" src="img/portfolio/contacts.png" alt="">
+          </div>
+          <div class="text-center mt-4">
+            <!-- <a class="btn btn-xl btn-outline-light view-demo bg-primary" target="_blank" href="https://snd47.github.io/sneakersShop/index.html"> -->
+              <a class="view-demo-a" target="_blank" href="https://snd47.github.io/contacts/index.html">
+              <i class="fab fa-github mr-2"></i>
+              View demo
+            </a>
+          </div>
+        </div>
+
+        <!-- Portfolio Item 7 -->
         <!-- <div class="col-md-6 col-lg-4 pb-3">
           <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
@@ -637,6 +663,47 @@
   </div>
 </div>
 
+<!-- Portfolio Modal 6 -->
+<div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">
+          <i class="fas fa-times"></i>
+        </span>
+      </button>
+      <div class="modal-body text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+              <!-- Portfolio Modal - Title -->
+              <h3 class="portfolio-modal-title text-secondary text-uppercase mb-0">Contacts Page</h3>
+              <!-- Icon Divider -->
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon">
+                  <i class="fas fa-star"></i>
+                </div>
+                <div class="divider-custom-line"></div>
+              </div>
+              <!-- Portfolio Modal - Image -->
+              <a target="_blank" href="https://snd47.github.io/contacts/index.html">
+              <img class="img-fluid rounded mb-5" src="img/portfolio/contacts.png" alt="Sneakers Shop on Vue.js">
+            </a>
+              <!-- Portfolio Modal - Text -->
+              <p class="mb-5">Contact page with interactive google map and validation. Using Vue.js and Bootstrap 4</p>
+             
+              <button class="btn btn-primary" href="#" data-dismiss="modal">
+                <i class="fas fa-times fa-fw"></i>
+                Close Window
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
